<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:minHeight="80dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/tv_item_total"
        android:text="@string/judul"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_total"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:gravity="end|center"
        android:layout_alignParentEnd="true"
        android:text="@string/total"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/tv_item_total"
        android:layout_below="@id/tv_item_title"
        android:text="@string/kategori"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/grey"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/tv_item_total"
        android:layout_below="@id/tv_item_category"
        android:text="@string/keterangan"
        android:textSize="12sp" />

</RelativeLayout>