<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tanggal"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/tanggal"/>

        <!--  Text Pengeluaran, Pemasukan, Selisih  dan rata-rata-->

        <TextView
            android:id="@+id/tv_pengeluaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal"
            tools:text="@string/pengeluaran" />

        <TextView
            android:id="@+id/tv_rataPengeluaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pengeluaran"
            tools:text="@string/rata_rata" />

        <TextView
            android:id="@+id/tv_pemasukan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rataPengeluaran"
            tools:text="@string/pemasukan" />

        <TextView
            android:id="@+id/tv_rataPemasukan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pemasukan"
            tools:text="@string/rata_rata" />

        <TextView
            android:id="@+id/tv_selisih"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rataPemasukan"
            tools:text="@string/selisih" />

        <!--  Text AngkaPengeluaran, AngkaPemasukan, AngkaSelisih -->

        <TextView
            android:id="@+id/tv_angkaPengeluaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal"
            tools:text="@string/angka_pengeluaran" />

        <TextView
            android:id="@+id/tv_angkaRataPengeluaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_angkaPengeluaran"
            tools:text="@string/angka_rata" />

        <TextView
            android:id="@+id/tv_angkaPemasukan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/color_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_angkaRataPengeluaran"
            tools:text="@string/angka_pemasukan" />

        <TextView
            android:id="@+id/tv_angkaRataPemasukan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/color_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_angkaPemasukan"
            tools:text="@string/angka_rata" />

        <TextView
            android:id="@+id/tv_angkaSelisih"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_green"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_angkaRataPemasukan"
            tools:text="@string/angka_selisih" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>